--- a/.gitattributes
+++ b/.gitattributes
@@ -2,4 +2,4 @@
 * text=auto
 *.csv filter=lfs diff=lfs merge=lfs -text
 feature_db/SIFT_descriptor_detector_features.csv filter=lfs diff=lfs merge=lfs -text
-feature_db/Pose_estimator_features.csv
+feature_db/Pose_estimator_features.csv filter=lfs diff=lfs merge=lfs -text
