--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,6 @@
 # Auto detect text files and perform LF normalization
 * text=auto
-*.csv filter=lfs diff=lfs merge=lfs -text
-feature_db/SIFT_descriptor_detector_features.csv filter=lfs diff=lfs merge=lfs -text
+
+# Add csv files to lfs system
 feature_db/Pose_estimator_features.csv filter=lfs diff=lfs merge=lfs -text
+feature_db/SIFT_descriptor_detector_features.csv filter=lfs diff=lfs merge=lfs -text
